--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
         
         <div class="comment-input">
             <textarea id="new-comment" placeholder="Add a comment..."></textarea>
-            <button onclick="addComment()">Post Comment</button>
+            <button id="post-comment">Post Comment</button>
         </div>
-        <div id="comments-list">
-        </div>
+        <div id="comments-list"></div>
     </div>
 
     <script src="scripts.js"></script>
